@@ -50,7 +50,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.image.kiosk" name="Kiosk" version="0.0.1" provider-name="Anonymous">
+<addon id="plugin.image.kiosk" name="Kiosk" version="0.0.2" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
 	<import addon="plugin.image.pdfreader"/>
